# reag

./: CONTRIBUTING.md  LICENSE.md  README.md
python/: .gitignore  README.md  pyproject.toml
python/src/reag/: client.py
python/tests/: test_client.py
typescript/: .gitignore  .npmignore  README.md  env.example  jest.config.ts  package.json  schema.ts  tsconfig.json
typescript/src/: client.ts  prompt.ts
typescript/tests/: client.test.ts
