[tool.poetry]
name = "reag"
version = "0.0.1"
description = "ReAG SDK - Reasoning Augmented Generation framework for Python"
authors = ["Ismail Pelaseyed <ismail@superagent.sh>"]
readme = "README.md"
packages = [{include = "reag"}]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pydantic = "^2.0.0"
httpx = "^0.25.0"
litellm = "^1.60.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3 